--- a/src/components/SidebarChat.scss
+++ b/src/components/SidebarChat.scss
@@ -13,5 +13,9 @@
         position: relative;
         width: 100%;
     }
+    &__info > small {
+        position: absolute;
+        top: 5px;
+        right: 0;
+    }
 }
-    
