--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -1,8 +1,8 @@
 .sidebar {
-    flex: 0.35;
-    height: 100vh;
     display: flex;
     flex-direction: column;
+    flex: 0.35;
+    height: 100vh;
     background-color: #f5f5f5;
     border-right: 1px solid lightgray;
 
@@ -32,5 +32,17 @@
         border: none;
         background: transparent;
         outline-width: 0;
+    }
+    &__chats {
+        overflow: auto;
+    }
+    // Hide scrollbar for Chrome, Safari and Opera
+    &__chats::-webkit-scrollbar {
+        display: none;
+    }
+    // Hide scrollbar for IE, Edge and Firefox
+    &__chats {
+        -ms-overflow-style: none; // IE & Edge
+        scrollbar-width: none; // Firefox
     }
 }
